# TapeSorter

./: CMakeLists.txt  README.md  TapeSorter.cpp  stats.txt
include/: TapeSorter.h
src/: CMakeLists.txt  compare.py  create_random_tape.py  main.cpp
src/config/: Config.cpp  Config.h
src/sorter/: TapeSorter.cpp  TapeSorter.h
src/tapes/: FileTape.cpp  FileTape.h  Tape.h  TempFileTape.cpp  TempFileTape.h
tests/: tests.cpp
